# VBASE-artifacts

./: README.md
VBench/Milvus/milvus-sdk-cpp/: .clang-tidy  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  Makefile  OWNERS  README.md  libmilvus.spec.rpkg
VBench/Milvus/milvus-sdk-cpp/cmake/: BuildUtils.cmake  DefineOptions.cmake  FindClangTools.cmake  MilvusSdkPackages.cmake  MilvusSdkPackagesLinux.cmake  ThirdPartyPackages.cmake
VBench/Milvus/milvus-sdk-cpp/doc/: Doxyfile
VBench/Milvus/milvus-sdk-cpp/doc/html/: _base_param_8h_source.html  _calc_distance_arguments_8h_source.html  _collection_desc_8h_source.html  _collection_info_8h_source.html  _collection_schema_8h_source.html  _collection_stat_8h_source.html  _compaction_plan_8h_source.html  _compaction_state_8h_source.html  _connect_param_8h_source.html  _constants_8h_source.html  _data_type_8h_source.html  _distance_array_8h_source.html  _dml_results_8h_source.html  _field_data_8h_source.html  _field_schema_8h_source.html  _i_d_array_8h_source.html  _index_desc_8h_source.html  _index_state_8h_source.html  _metric_type_8h_source.html  _milvus_client_8h_source.html  _milvus_client_impl_8h_source.html  _milvus_connection_8h_source.html  _partition_info_8h_source.html  _partition_stat_8h_source.html  _progress_monitor_8h_source.html  _query_arguments_8h_source.html  _query_results_8h_source.html  _search_arguments_8h_source.html  _search_results_8h_source.html  _segment_info_8h_source.html  _status_8h_source.html  _type_utils_8h_source.html  annotated.html  classes.html  classmilvus_1_1_calc_distance_arguments-members.html  classmilvus_1_1_calc_distance_arguments.html  classmilvus_1_1_collection_desc-members.html  classmilvus_1_1_collection_desc.html  classmilvus_1_1_collection_info-members.html  classmilvus_1_1_collection_info.html  (+110 more)
VBench/Milvus/milvus-sdk-cpp/doc/html/search/: all_0.js  all_1.js  (+54 more)
VBench/Milvus/milvus-sdk-cpp/doc/latex/: annotated.tex  classmilvus_1_1_calc_distance_arguments.tex  classmilvus_1_1_collection_desc.tex  classmilvus_1_1_collection_info.tex  classmilvus_1_1_collection_schema.tex  classmilvus_1_1_collection_stat.tex  classmilvus_1_1_compaction_plan.tex  classmilvus_1_1_compaction_state.tex  classmilvus_1_1_connect_param.tex  classmilvus_1_1_distance_array.tex  classmilvus_1_1_dml_results.tex  classmilvus_1_1_field_data.tex  classmilvus_1_1_field_schema.tex  classmilvus_1_1_i_d_array.tex  classmilvus_1_1_index_desc.tex  classmilvus_1_1_index_progress.tex  classmilvus_1_1_index_state.tex  classmilvus_1_1_milvus_client.tex  classmilvus_1_1_partition_info.tex  classmilvus_1_1_partition_stat.tex  classmilvus_1_1_progress_monitor.tex  classmilvus_1_1_query_arguments.tex  classmilvus_1_1_query_results.tex  classmilvus_1_1_query_segment_info.tex  classmilvus_1_1_search_arguments.tex  classmilvus_1_1_search_results.tex  classmilvus_1_1_segment_info.tex  classmilvus_1_1_status.tex  dir_3808e3f8fe545b07b1d2715928fb0eea.tex  dir_53c00515ba0a574351444ad81a3f1700.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b0856f6b0d80ccb263b2f415c91f9e17.tex  dir_b292c6f458f3bdf7941be97859a69fbd.tex  dir_b6ff2fb64eb6015f5a54c9a9533a889d.tex  hierarchy.tex  namespacemilvus.tex  namespaces.tex  refman.tex  structmilvus_1_1_progress.tex  structmilvus_1_1_single_result.tex
VBench/Milvus/milvus-sdk-cpp/examples/: CMakeLists.txt
VBench/Milvus/milvus-sdk-cpp/examples/simple/: CMakeLists.txt  main.cpp  multi-no-filter.cpp  multi-or-filter.cpp  single-no-filter.cpp  single-or-filter.cpp  testNRA.cpp
VBench/Milvus/milvus-sdk-cpp/scripts/: build.sh  coverage.sh  format_exclusions.txt  install_deps.sh  lint_exclusions.txt  run_clang_format.py  run_clang_tidy.py  run_cpplint.py
VBench/Milvus/milvus-sdk-cpp/src/: CMakeLists.txt
VBench/Milvus/milvus-sdk-cpp/src/impl/: MilvusClientImpl.cpp  MilvusClientImpl.h  MilvusConnection.cpp  MilvusConnection.h  Status.cpp  TypeUtils.cpp  TypeUtils.h
VBench/Milvus/milvus-sdk-cpp/src/proto-gen/: proto-gen.cmake
VBench/Milvus/milvus-sdk-cpp/test/: CMakeLists.txt
VBench/Milvus/milvus-sdk-cpp/test/it/: TestAlias.cpp  TestCalcDistance.cpp  TestCompact.cpp  TestConnection.cpp  TestCreateCollection.cpp  TestCreateIndex.cpp  TestCreatePartition.cpp  TestDelete.cpp  TestDescribeCollection.cpp  TestDescribeIndex.cpp  TestDropCollection.cpp  TestDropIndex.cpp  TestDropPartition.cpp  TestFlush.cpp  TestGetCollectionsStatistics.cpp  TestGetIndexBuildProgress.cpp  TestGetIndexState.cpp  TestGetMetrics.cpp  TestGetPartitionStatistics.cpp  TestGetPersistentSegmentInfo.cpp  TestGetQuerySegmentInfo.cpp  TestHasCollection.cpp  TestHasPartition.cpp  TestInsert.cpp  TestLoadBalance.cpp  TestLoadCollection.cpp  TestLoadPartitions.cpp  TestQuery.cpp  TestReleasePartitions.cpp  TestRelseaseCollection.cpp  TestSearch.cpp  TestShowPartitions.cpp
VBench/Milvus/milvus-sdk-cpp/test/st/: MilvusDockerServer.cpp  MilvusDockerServer.h  MilvusServerTest.h  TestCollection.cpp  TestSearch.cpp
VBench/Milvus/milvus-sdk-cpp/test/ut/: TestCalcDistanceArguments.cpp  TestCollectionDesc.cpp  TestCollectionInfo.cpp  TestCollectionSchema.cpp  TestCollectionStat.cpp  TestCompactionPlan.cpp  TestCompactionState.cpp  TestConnectParam.cpp  TestDistanceArray.cpp  TestDmlResults.cpp  TestDummy.cpp  TestFieldData.cpp  TestFieldSchema.cpp  TestHybirdTimestamp.cpp  TestIDArray.cpp  TestIndexDesc.cpp  TestPartitionStat.cpp  TestProgressMonitor.cpp  TestQueryArguments.cpp  TestQueryResults.cpp  TestSearchArguments.cpp  TestSearchResults.cpp  TestSegmentInfo.cpp  TestStatus.cpp  TestTypeUtils.cpp
vectordb/model_zoo/: CMakeLists.txt  img2vec.cpp  models.h  modeltest.cpp  util.cpp  util.h  word2vec.cpp
vectordb/references/pgvector/: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  pgvector.ipynb
vectordb/references/pgvector/bench/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
vectordb/references/pgvector/lib/: CMakeLists.txt  lib.cpp
vectordb/references/pgvector/src/: cpptest.cpp  cpptest.h  ivfbuild.c  ivfflat.c  ivfflat.h  ivfinsert.c  ivfkmeans.c  ivfscan.c  ivfutils.c  ivfvacuum.c  vector.c  vector.h
(+296 files in other folders)
